--- a/NeuralNetworkRefactored.ipynb
+++ b/NeuralNetworkRefactored.ipynb
@@ -123,6 +123,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "An example of plot and how to filter signal at https://github.com/losc-tutorial/Data_Guide/blob/master/Guide_Notebook.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this case, over 164 chunks, I will use 150 as training and the remaining as test"
    ]
   },
@@ -185,6 +192,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following we will use a slightly different approch from usual, instead of using a single command, we use sklearn as interface to call other functions. The idea is to learn to wrap Keras models for use in scikit-learn and how to use grid search.\n",
+    "\"GridSearchCV is a library function that is a member of sklearn's model_selection package. It helps to loop through predefined hyperparameters and fit your estimator (model) on your training set. So, in the end, you can select the best parameters from the listed hyperparameters\"\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n",
+    "https://machinelearningmastery.com/grid-search-hyperparameters-deep-learning-models-python-keras/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -235,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "mzW1P1MsjIlu"
    },
@@ -251,6 +268,21 @@
       "Instructions for updating:\n",
       "keep_dims is deprecated, use keepdims instead\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score='raise',\n",
+       "       estimator=<keras.wrappers.scikit_learn.KerasRegressor object at 0x7f23417da978>,\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'bias1': [1e-09], 'bias2': [1e-09], 'ker2': [1e-09], 'ker1': [1e-09], 'dropout': [0.1, 0.2, 0.3]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -259,11 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "nweJaK_7jIvO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: nan using {'bias1': 1e-09, 'bias2': 1e-09, 'dropout': 0.1, 'ker1': 1e-09, 'ker2': 1e-09}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Best: %f using %s\" % (grid_search.best_score_, grid_search.best_params_))\n",
     "means  = grid_search.cv_results_['mean_test_score']\n",
@@ -282,11 +322,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "wJ_adbrLaDF4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['best_model.pkl']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "joblib.dump(grid_search.best_params_, 'best_model.pkl')"
    ]
