--- a/virgo.ipynb
+++ b/virgo.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Virgo Exercise\n",
     "\n",
-    "The aim of the exercise is to prepare a ML tool which is able to compress as much as possible a gwf data \n",
+    "The aim of the exercise is to prepare a ML tool which is able to compress and clean as much as possible a gwf data \n",
     "\n",
     "In this exercise you will:\n",
     "\n",
@@ -18,11 +18,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e0db6a2",
+   "metadata": {},
+   "source": [
+    "For an introduction on what GW and interferometers are please refer to https://confluence.infn.it/display/MLINFN/7.+Virgo+Autoencoder+tutorial\n",
+    "\n",
+    "For a brief vocabulary see https://labcit.ligo.caltech.edu/~ll_news/0607a_news/LIGO_Vocabulary.htm\n",
+    "\n",
+    "IGWN stands for International Gravitational-Wave Observatory Network, It is a comunity made by three collaborations: LIGO VIRGO and KAGRA \n",
+    "\n",
+    "Strain is the instrument’s ability to detect a space change within an arm in comparison to the total space (length) of the arm\n",
+    "\n",
+    "GWF stands for Gravitational Wave File and is the format IGWN used to store (not only!) interferometer strain\n",
+    "\n",
+    "All data we will use in this tutorial is freely accessibile and published in GWOSC (https://www.gw-openscience.org/about/). GWOSC, The Gravitational Wave Open Science Center, provides data from gravitational-wave observatories, along with access to tutorials and software tools. You could find there many information if you are interested"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "172c45c5",
    "metadata": {},
    "source": [
-    "We will import all functions needed!\n",
-    "*gwdama* aims at providing a unified and easy to use interface to access Gravitational Wave (GW) data and output some well organised datasets, ready to be used for Machine Learning projects or Data Analysis purposes (source properties, noise studies, etc.)"
+    "To begin we will import all functions needed!\n",
+    "\n",
+    "To help in reading IGWN files we will used a python package called gwdama\n",
+    "\n",
+    "*gwdama* (https://pypi.org/project/gwdama/) aims at providing a unified and easy to use interface to access Gravitational Wave (GW) data and output some well organised datasets, ready to be used for Machine Learning projects or Data Analysis purposes (source properties, noise studies, etc.)"
    ]
   },
   {
@@ -45,9 +66,10 @@
    "id": "2ac3fe43",
    "metadata": {},
    "source": [
-    "Data is accessible and ordered by gps time\n",
+    "Accessible data is ordered by gps time and run type (Observing Calibration etc..). Observing run, generally called O with a number to distinguish between many of them (for example **O3**), are our scientific and acquisition runs  \n",
     "At https://www.gw-openscience.org/events/ you could find a list of events with their gps time and a brief description of the results\n",
-    "Let's get data between 1186746568 and 1186746628 and call it \"online\""
+    "\n",
+    "Let's get data between two gps 1186746568 and 1186746628 and call it \"online\""
    ]
   },
   {
@@ -117,7 +139,8 @@
    ],
    "source": [
     "online=dama['online']\n",
-    "online.plot()"
+    "online.plot()\n",
+    "# time vs strain"
    ]
   },
   {
@@ -125,7 +148,7 @@
    "id": "360a5992",
    "metadata": {},
    "source": [
-    "Note: the timestamp is different because internally in the IGWN we use a different convention\n",
+    "**Note**: the timestamp is different because internally in the IGWN we use a different convention\n",
     "\n",
     "**Exercise**: read multiple files and plot them with a single for loop\n",
     "\n",
