--- a/virgo.ipynb
+++ b/virgo.ipynb
@@ -25,13 +25,13 @@
     "\n",
     "For a brief vocabulary see https://labcit.ligo.caltech.edu/~ll_news/0607a_news/LIGO_Vocabulary.htm\n",
     "\n",
-    "IGWN stands for International Gravitational-Wave Observatory Network, It is a comunity made by three collaborations: LIGO VIRGO and KAGRA \n",
+    "**IGWN** stands for International Gravitational-Wave Observatory Network, it is a comunity made by three collaborations: LIGO VIRGO and KAGRA \n",
     "\n",
-    "Strain is the instrument’s ability to detect a space change within an arm in comparison to the total space (length) of the arm\n",
+    "**Strain** is the instrument’s ability to detect a space change within an arm in comparison to the total space (length) of the arm\n",
     "\n",
-    "GWF stands for Gravitational Wave File and is the format IGWN used to store (not only!) interferometer strain\n",
+    "**GWF** stands for Gravitational Wave File and is the format IGWN used to store (not only!) interferometer strain\n",
     "\n",
-    "All data we will use in this tutorial is freely accessibile and published in GWOSC (https://www.gw-openscience.org/about/). GWOSC, The Gravitational Wave Open Science Center, provides data from gravitational-wave observatories, along with access to tutorials and software tools. You could find there many information if you are interested"
+    "All data we will use in this tutorial is freely accessibile and published in **GWOSC** (https://www.gw-openscience.org/about/). GWOSC, The Gravitational Wave Open Science Center, provides data from gravitational-wave observatories, along with tutorials and software tools. You could find there many information if you are interested"
    ]
   },
   {
@@ -66,10 +66,13 @@
    "id": "2ac3fe43",
    "metadata": {},
    "source": [
-    "Accessible data is ordered by gps time and run type (Observing Calibration etc..). Observing run, generally called O with a number to distinguish between many of them (for example **O3**), are our scientific and acquisition runs  \n",
+    "Accessible data is ordered by gps time and run type (Observing Calibration etc..). Observing run, generally called O with a number to distinguish between many of them (for example **O3**), are our scientific and acquisition runs\n",
+    "\n",
+    "**gps time** is a timestamp relative to an arbitrarly event, internally we use tools to convert to usual time\n",
+    "\n",
     "At https://www.gw-openscience.org/events/ you could find a list of events with their gps time and a brief description of the results\n",
     "\n",
-    "Let's get data between two gps 1186746568 and 1186746628 and call it \"online\""
+    "Let's get data between two gps 1186746568 and 1186746628 from GWOSC and call it \"**online** dataset\""
    ]
   },
   {
@@ -115,7 +118,7 @@
    "id": "97655e93",
    "metadata": {},
    "source": [
-    "data acquisition is 21-04-21_10h50m25s\n",
+    "data acquisition is 21-04-21_10h50m25s.\n",
     "To acquire some confidence with data we will start with a plot"
    ]
   },
@@ -152,7 +155,9 @@
     "\n",
     "**Exercise**: read multiple files and plot them with a single for loop\n",
     "\n",
-    "Now we will make an histogram of data and fit with a gaussian"
+    "As a pretest to show some functions in gwdama, we will make an histogram of data and fit with a gaussian\n",
+    "\n",
+    "**norm** is a class of scipy to work with a normal distribution (https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.norm.html). In this case we will use the fit method to estimate meand and standard deviation of the input signal. If a **gw** is not present than we can assume for the scope of this exercise that the signal is normal distribute (which is not in real life!) "
    ]
   },
   {
@@ -171,7 +176,21 @@
    "id": "4eda9d9f",
    "metadata": {},
    "source": [
-    "Customize the plot, adding the fitted gaussian and a legend"
+    "Customize the plot, adding the fitted gaussian and a legend\n",
+    "\n",
+    "**gca** method gets the current Axes, creating one if necessary\n",
+    "\n",
+    "**get_xlim** return min and max value on the x axis\n",
+    "\n",
+    "**linspace** return evenly spaced number in an interval\n",
+    "\n",
+    "**pdf** return a probability density function (see norm before)\n",
+    "\n",
+    "**plot** plot x,y data. 'r--' is used to control the line style (https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html) \n",
+    "\n",
+    "**legend** add a legend to the plot\n",
+    "\n",
+    "**show** is used to show the plot"
    ]
   },
   {
@@ -218,7 +237,9 @@
    "id": "c4282965",
    "metadata": {},
    "source": [
-    "Create a psd with sample rate 500 Hz"
+    "Create a **PSD** with sample rate 500 Hz\n",
+    "\n",
+    "**Note**: Power Spectral Density (PSD) is the measure of signal's power content versus frequency. A PSD is typically used to characterize broadband random signals"
    ]
   },
   {
@@ -297,14 +318,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "622217d1",
+   "metadata": {},
+   "source": [
+    "We generally work with signal normalize to its spectral density\n",
+    "\n",
+    "A **whitned** signal is a normalized signal to its spectral density. TO compute it you should get in the freq domain, divide it by the square roots of the power spectral density and return to time domain\n",
+    "\n",
+    "For convenience gwdama provides a simple function that whiten the signal: output=whiten(input, input_psd, freq)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bd1ff0a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# and clean it\n",
-    "online_cleaned = whiten(online, dama['online_psd'].data, 1./500)"
+    "import gwdama.preprocessing as pre\n",
+    "online_cleaned = pre.whiten(online, dama['online_psd'].data, 1./500)"
    ]
   },
   {
@@ -312,7 +345,9 @@
    "id": "64f6b109",
    "metadata": {},
    "source": [
-    "It could be usefull to resample the data in order to work with lighter files"
+    "This data is sampled at 4096 Hz, but our interferometers acts like a pass band signal from a frequency ~ between 20-400Hz so it could be usefull to resample the data in order to work with lighter files and remove some noise\n",
+    "\n",
+    "**decimate_recursive** resamples an input signal keeping only 1 elem every n"
    ]
   },
   {
@@ -322,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "online_res, new_fs = dama.decimate_recursive(online_cleaned, 10)"
+    "online_res, new_fs = pre.decimate_recursive(online_cleaned, 10)"
    ]
   },
   {
@@ -520,7 +555,7 @@
    "outputs": [],
    "source": [
     "# machine learning\n",
-    "# epochs is usetd for recurrent networks, we don't need them so we set to 1\n",
+    "# epochs is used for recurrent networks, we don't need them so we set to 1\n",
     "# batch_size is the number of input chunks\n",
     "mlp = KerasRegressor(build_fn=baseline_model, epochs=1, batch_size=n_features, verbose=0)"
    ]
