--- a/virgo.ipynb
+++ b/virgo.ipynb
@@ -377,6 +377,8 @@
     "\n",
     "[from wiki]: An autoencoder is a type of artificial neural network used to learn efficient data codings in an unsupervised manner. The aim of an autoencoder is to learn a representation (encoding) for a set of data, typically for dimensionality reduction, by training the network to ignore signal “noise”. Along with the reduction side, a reconstructing side is learned, where the autoencoder tries to generate from the reduced encoding a representation as close as possible to its original input, hence its name\n",
     "\n",
+    "some examples of autoencoders in keras at https://blog.keras.io/building-autoencoders-in-keras.html\n",
+    "\n",
     "The idea is to downsampling and resampling to original dimension searching for an optimum parameters that makes filtered signal more similar to original one. The downsampled signal will retain all needed information but with a reduction of size"
    ]
   },
@@ -415,6 +417,13 @@
     "\n",
     "[ https://en.wikipedia.org/wiki/Activation_function ]\n",
     "\n",
+    "## Loss function\n",
+    "Loss is nothing but a prediction error of Neural Network. And the method to calculate the loss is called Loss Function\n",
+    "\n",
+    "## Optimizer\n",
+    "\n",
+    "The **optimizer** is used to explorer the parameters space searching which value correspond to a minimum value of the loss function\n",
+    "\n",
     "## Learning \n",
     "\n",
     "**Supervised learning** is the machine learning task of learning a function that maps an input to an output based on example input-output pairs\n",
@@ -431,7 +440,9 @@
    "id": "bd3dd595",
    "metadata": {},
    "source": [
-    "**Question**: Could an autoencoder have only a single layer? Two layers? Three?"
+    "**Question**: Could an autoencoder have in total only a single layer? Two layers? Three?\n",
+    "\n",
+    "**Remark**:The loss function is used to optimize your model. This is the function that will get minimized by the optimizer. A metric is used to judge the performance of your model!"
    ]
   },
   {
@@ -439,7 +450,7 @@
    "id": "35b28bb6",
    "metadata": {},
    "source": [
-    "In the following we will use keras ( https://keras.io/ )\n",
+    "We will use keras ( https://keras.io/ )\n",
     "\"Keras is an API designed for human beings, not machines. Keras follows best practices for reducing cognitive load: it offers consistent & simple APIs, it minimizes the number of user actions required for common use cases, and it provides clear & actionable error messages. It also has extensive documentation and developer guides.\"\n",
     "\n",
     "Some usefull info:\n",
@@ -449,6 +460,8 @@
     "- https://keras.io/api/models/\n",
     "\n",
     "In the following we will use a slightly different approch from usual, instead of using a single command, we use sklearn as interface to call other functions. The idea is to learn to wrap Keras models for use in scikit-learn and how to use grid search. \"GridSearchCV is a library function that is a member of sklearn's model_selection package. It helps to loop through predefined hyperparameters and fit your estimator (model) on your training set. So, in the end, you can select the best parameters from the listed hyperparameters\" \n",
+    "\n",
+    "Please **Remember**: Keras is a high-level API built on Tensorflow. Scikit Learn is a general machine learning library built on top of NumPy\n",
     "\n",
     "[https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html ] \n",
     "\n",
@@ -548,6 +561,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a70bc4e4",
+   "metadata": {},
+   "source": [
+    "We had defined a function (with four parameters!) that build a very minimalistic model\n",
+    "\n",
+    "**Sequential** initialize the model\n",
+    "\n",
+    "**add** method is used to add layers to your model\n",
+    "\n",
+    "**compile** method id used to configure the model for training https://www.tensorflow.org/api_docs/python/tf/keras/Model#compile\n",
+    "\n",
+    "some reference to its parameters:\n",
+    "- https://www.tensorflow.org/api_docs/python/tf/keras/optimizers\n",
+    "- https://www.tensorflow.org/api_docs/python/tf/keras/losses\n",
+    "- https://www.tensorflow.org/api_docs/python/tf/keras/metrics/Metric\n",
+    "\n",
+    "You could get usefull debugging message with **model.summary()**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e84d2213",
@@ -558,6 +592,18 @@
     "# epochs is used for recurrent networks, we don't need them so we set to 1\n",
     "# batch_size is the number of input chunks\n",
     "mlp = KerasRegressor(build_fn=baseline_model, epochs=1, batch_size=n_features, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10a89ed0",
+   "metadata": {},
+   "source": [
+    "**KerasRegressor** is a wrapper to use keras from sklearn. It takes as parameters, your function model, epochs, batch size. See for example https://www.tensorflow.org/api_docs/python/tf/keras/wrappers/scikit_learn/KerasRegressor\n",
+    "\n",
+    "The **batch size** is a hyperparameter that defines the number of samples to work through before updating the internal model parameters\n",
+    "\n",
+    "The number of **epochs** is a hyperparameter that defines the number times that the learning algorithm will work through the entire training dataset. See for example https://machinelearningmastery.com/difference-between-a-batch-and-an-epoch/"
    ]
   },
   {
@@ -572,6 +618,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63f999d7",
+   "metadata": {},
+   "source": [
+    "param_distr is a dictionary of parameters to try, we will explore on all combinations\n",
+    "**Query**: How many combinations will have in a general case? In this case?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e79ae5b",
@@ -580,6 +635,14 @@
    "source": [
     "# build our model all together\n",
     "grid_search = GridSearchCV(estimator=mlp, param_grid=param_distr, cv=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8ee4b94",
+   "metadata": {},
+   "source": [
+    "**GridSearchCV** Exhaustive search over specified parameter values for an estimator. So we are trying all combinations! https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html"
    ]
   },
   {
@@ -621,7 +684,9 @@
    "id": "45e4f76d",
    "metadata": {},
    "source": [
-    "## Exercise 1: Alter input and model to have in output value between a different range"
+    "## Exercise 1: Alter input and model to have in output value between a different range\n",
+    "\n",
+    "Redo all steps but in the model function use a different activation function"
    ]
   },
   {
@@ -650,7 +715,11 @@
    "id": "91ddfd6b",
    "metadata": {},
    "source": [
-    "## Exercise 3: Alter model, adding a decimate layer and a new dense layer"
+    "## Exercise 3: Alter model, adding a dropout layer and a new dense layer\n",
+    "\n",
+    "That's where we get our compression! we are asking to our model please try to be as similar as possible to the input signal with less variables. The number of variables in this case is the number of neuron in the droput layer\n",
+    "\n",
+    "Try to build a model that half the variable.  Suggestion pass 0.5 to droput and set size according to dense layer"
    ]
   },
   {
